[package]
name = "udp_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
lockfree-object-pool = "0.1"
tokio = { version = "1", features = [
    "bytes",
    "io-util",
    "net",
    "sync",
    "time",
] }

[dev-dependencies]
futures = "0.3"
tokio = { features = ["macros", "rt-multi-thread"] }
