[package]
name = "udp_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.34" }
tokio = { version = "1", features = [
    "bytes",
    "io-util",
    "net",
    "sync",
    "time",
] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
